# LTI-ATS

./: .gitignore  README.md  README_comentarios_finales.md  docker-compose.yml
backend/: .coverage  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/v1/: routes.py
backend/src/api/v1/endpoints/: recruitment.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/postgres/: init.sql
docs/: STRUCTURE.md
frontend/: README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
prompts/: prompts.md
